<resources>
    <string name="app_name">Pocket Secretary</string>
    <string name="options_error">Sorry, dude!!!\nI can\'t do it yet</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="aka">aka</string>
    <string name="email">E-mail</string>
    <string name="skype">Skype</string>
    <string name="phone">Phone</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="menu_options">Options</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_about">About</string>
    <string name="menu_contacts">Contacts</string>
    <string name="about_toast">Hi, it\'s simple ToDo app\nwhich\'s made by puga4enko@gmail.com\nfor Study Jam of GDG-NN</string>
</resources>
