<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pocketsecretary="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/mniAnalytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_analytics"
        pocketsecretary:showAsAction="collapseActionView" />
    <!--<item-->
        <!--android:id="@+id/mniOptions"-->
        <!--android:title="@string/menu_options"-->
        <!--pocketsecretary:showAsAction="collapseActionView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
    <item
        android:id="@+id/mniContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_contacts"
        pocketsecretary:showAsAction="collapseActionView" />
    <item
        android:id="@+id/mniAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_about"
        pocketsecretary:showAsAction="collapseActionView" />

</menu>